--- a/client/templates.jade
+++ b/client/templates.jade
@@ -41,8 +41,6 @@ template(name='layout')
 
 
 
-template(name="tag_result")
-    .ui.basic.label #{name}
 
 template(name='not_found')
     .ui.text.container
@@ -111,3 +109,10 @@ template(name='sidebar')
                 a.ui.toggle_sidebar.item(href='/sign-in') 
                     i.sign.in.icon
                     | Sign In
+
+
+template(name='camera')
+    #webcam
+    button.snap Take photo
+    if image
+        img(src='{{image}}')
