--- a/components/account/profile/view_profile.tpl.jade
+++ b/components/account/profile/view_profile.tpl.jade
@@ -18,14 +18,8 @@ with person
             if profile.website
                 .ui.header Website 
                 a(href=profile.website target='_blank') #{profile.website}
-            if profile.pro_bio
-                .ui.header What Working On / Interest in Social Change
-                |#{profile.pro_bio}
-            if profile.needs
-                .ui.header Needs
-                |#{profile.needs}
             if isInRole 'admin'
                 .ui.horizontal.divider.header
                     i.red.configure.icon
                     | Admin
-            +edit_profile_button
+                +timecard
