--- a/components/staff/staff.jade
+++ b/components/staff/staff.jade
@@ -1,28 +1,41 @@
 template(name='staff')
     .ui.container
-        .ui.dividing.header Staff
-        
-        
-template(name='staff_nav')
-    .ui.seven.item.menu
-        a.item(href='/readings' class="{{isActivePath '/readings'}}")
-            i.theme.icon
-            span.mobile.hidden  Readings
-        a.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
-            i.random.icon
-            span.mobile.hidden Lost and Found
-        a.item(href='/bikes' class="{{isActivePath '/bikes'}}")
-            i.bicycle.icon
-            span.mobile.hidden Bikes
-        a.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
+        h1.ui.dividing.center.aligned.header 
             i.circle.info.icon
-            span.mobile.hidden Desk Staff
-        a.item(href='/buildings' class="{{isActivePath '/buildings'}}")
-            i.building.icon
-            span.mobile.hidden Buildings
-        a.item(href='/tasks' class="{{isActivePath '/tasks'}}")
-            i.edit.icon
-            span.mobile.hidden Tasks
-        a.item(href='/keys' class="{{isActivePath '/keys'}}")
-            i.key.icon
-            span.mobile.hidden Keys
+            |Staff Back End
+        .ui.centered.cards
+            a.ui.card(href='/readings' class="{{isActivePath '/readings'}}")
+                .content
+                    .ui.icon.header
+                        i.theme.icon
+                        h2.content Readings
+            a.ui.card(href='/lostfound' class="{{isActivePath '/lostfound'}}")
+                .content
+                    .ui.icon.header
+                        i.random.icon
+                        h2.content Lost and Found
+            a.ui.card(href='/bikes' class="{{isActivePath '/bikes'}}")
+                .content
+                    .ui.icon.header
+                        i.bicycle.icon
+                        h2.content Bikes
+            a.ui.card(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
+                .content
+                    .ui.icon.header
+                        i.circle.info.icon
+                        h2.content Desk Staff
+            a.ui.card(href='/buildings' class="{{isActivePath '/buildings'}}")
+                .content
+                    .ui.icon.header
+                        i.building.icon
+                        h2.content Buildings
+            a.ui.card(href='/tasks' class="{{isActivePath '/tasks'}}")
+                .content
+                    .ui.icon.header
+                        i.edit.icon
+                        h2.content Tasks
+            a.ui.card(href='/keys' class="{{isActivePath '/keys'}}")
+                .content
+                    .ui.icon.header
+                        i.key.icon
+                        h2.content Keys
