remove messages, comments, change people to users, add user interface

--- a/components/account/profile/edit_profile.tpl.jade
+++ b/components/account/profile/edit_profile.tpl.jade
@@ -31,6 +31,11 @@
                         each emails
                             .ui.basic.label #{address}
                     .field
+                        label Phone
+                        .ui.input
+                            input#phone(type='text' value=profile.phone)
+                            
+                    .field
                         label Company 
                         .ui.input
                             input#company(type='text' value=profile.company)
@@ -42,6 +47,16 @@
                         label Website 
                         .ui.input
                             input#website(type='text' value=profile.website)
+                    .field
+                        label Tags
+                        each tags
+                            .ui.basic.button.doc_tag(class=doc_tag_class)
+                                i.minus.icon
+                                |#{this}
+                        .ui.left.icon.four.wide.input
+                            i.add.icon
+                            input#add_tag(type='text' placeholder='Add Tag' maxlength='50')
+                            
         .field
                 .ui.center.aligned.basic.segment
                     #save_profile.ui.center.aligned.huge.teal.button
