--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -41,7 +41,7 @@
             // a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
             //     i.mail.icon
             if isInRole 'admin'
-                a.mobile.hidden.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
+                a.mobile.hidden.item(href='/admin' class="{{isActivePath '/admin'}}")
                     i.configure.icon
                     |Admin
             a.mobile.hidden.item(href='/staff' class="{{isActivePath '/staff'}}")
