--- a/components/admin/user_table.jade
+++ b/components/admin/user_table.jade
@@ -8,6 +8,7 @@ template(name='user_table')
                 tr
                     th Image
                     th Profile
+                    th Roles
             tbody
                 each users
                     tr
@@ -22,3 +23,44 @@ template(name='user_table')
                                 |#{address}
                             a(href="/account/profile/edit/#{_id}")
                                 |Edit
+                        td 
+                            .ui.hidden.fitted.divider
+                            .ui.left.labeled.button
+                                if is_dev
+                                    .ui.green.label Dev
+                                    .remove_dev.ui.basic.icon.button
+                                        i.remove.icon 
+                                else
+                                    .ui.basic.label Dev
+                                    .make_dev.ui.basic.icon.button
+                                        i.plus.icon 
+                            .ui.hidden.fitted.divider
+                            .ui.left.labeled.button
+                                if is_staff
+                                    .ui.green.label staff
+                                    .remove_staff.ui.basic.icon.button
+                                        i.remove.icon 
+                                else
+                                    .ui.basic.label staff
+                                    .make_staff.ui.basic.icon.button
+                                        i.plus.icon 
+                            .ui.hidden.fitted.divider
+                            .ui.left.labeled.button
+                                if is_owner
+                                    .ui.green.label owner
+                                    .remove_beta.ui.basic.icon.button
+                                        i.remove.icon 
+                                else
+                                    .ui.basic.label owner
+                                    .make_owner.ui.basic.icon.button
+                                        i.plus.icon 
+                            .ui.hidden.fitted.divider
+                            .ui.left.labeled.button
+                                if is_resident
+                                    .ui.green.label Resident
+                                    .remove_resident.ui.basic.icon.button
+                                        i.remove.icon 
+                                else
+                                    .ui.basic.label Resident
+                                    .make_resident.ui.basic.icon.button
+                                        i.plus.icon 
