--- a/components/checkin/checkin.jade
+++ b/components/checkin/checkin.jade
@@ -18,21 +18,26 @@ template(name='checkin')
                 |Check In
                 i.right.arrow.icon
         .ui.dividing.center.aligned.header Checked In Members
-        each checked_in_users
-            .ui.card
-                .content
-                    .header
-                        |#{username}
-                .content
-                    .sign_out_user.ui.fluid.basic.button
-                        i.sign.out.icon
-                        |Check Out
-                .content
-                    .add_guest.ui.fluid.basic.button
-                        i.icons
-                            i.user.icon
-                            i.plus.green.corner.icon
-                        |Add Guest
+        .ui.centered.cards
+            each checked_in_users
+                .ui.card
+                    .image
+                        a(href="/profile/#{_id}")
+                            img.ui.fluid.image(src="{{c.url profile.image_id height=400 width=800 background='white' crop='pad'}}")
+                
+                    .content
+                        .header
+                            |#{username}
+                    .content
+                        .sign_out_user.ui.fluid.basic.button
+                            i.sign.out.icon
+                            |Check Out
+                    .content
+                        .add_guest.ui.fluid.basic.button
+                            i.icons
+                                i.user.icon
+                                i.plus.green.corner.icon
+                            |Add Guest
 
 
 template(name="tag_result")
