--- a/components/staff/tasks/tasks.jade
+++ b/components/staff/tasks/tasks.jade
@@ -46,13 +46,15 @@ template(name='task')
                     .flip_shape.sides
                         if before_image_id
                             a.side.active
+                                .content
+                                    .ui.center.aligned.header Before
                                 .image
-                                    .ui.header Before
                                     img.ui.image(src="{{c.url before_image_id width='400' height='400' crop='lpad' }}")
                         if after_image_id
                             a.side
+                                .content
+                                    .ui.center.aligned.header After
                                 .image
-                                    .ui.header After
                                     img.ui.image(src="{{c.url after_image_id width='400' height='400' crop='lpad' }}")
         .content
             if complete
