--- a/client/client.jade
+++ b/client/client.jade
@@ -6,21 +6,6 @@ head
 
 
 
-    // LayerSlider stylesheet
-    link(rel='stylesheet', href='/layerslider/css/layerslider.css', type='text/css')
-    // External libraries: GreenSock
-    script(src='/layerslider/js/jquery.js', type='text/javascript')
-    script(src='/layerslider/js/greensock.js', type='text/javascript')
-    // LayerSlider script files
-    script(src='/layerslider/js/layerslider.transitions.js', type='text/javascript')
-    script(src='/layerslider/js/layerslider.kreaturamedia.jquery.js', type='text/javascript')
-    // sorting
-    script(src='/tablesort.js', type='text/javascript')
-    
-
-
-
-
 
 template(name='layout')
     .context.example
@@ -34,10 +19,7 @@ template(name='layout')
             .pusher
                 #main_area
                     .ui.basic.fluid.segment
-                        +Template.dynamic template=cloud
-                        +Template.dynamic template=sub_nav
-                        +Template.dynamic template=sub_sub_nav
-                        +Template.dynamic template=main
+                        +yield
 
 
 
