--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title Gold Run
+    title gold run
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -27,7 +27,6 @@ template(name='layout')
 template(name='not_found')
     .ui.text.container
         .ui.center.aligned.header Not Found
-        // h5.ui.center.aligned.header Those responsible have been sacked.
 
 
 template(name='sidebar')
