--- a/components/staff/staff.jade
+++ b/components/staff/staff.jade
@@ -1,8 +1,8 @@
 template(name='staff')
     .ui.container
-        h1.ui.dividing.center.aligned.header 
-            i.circle.info.icon
-            |Staff Back End
+        //- h1.ui.dividing.center.aligned.header 
+        //-     i.circle.info.icon
+        //-     |Staff
         .ui.centered.cards
             a.ui.card(href='/readings' class="{{isActivePath '/readings'}}")
                 .content
