copy in user profile and goldrun check in

--- a/client/client.jade
+++ b/client/client.jade
@@ -20,7 +20,7 @@ template(name='layout')
                 #main_area
                     .ui.basic.fluid.segment
                         +yield
-
+        +footer
 
 
 
