--- a/components/nav.jade
+++ b/components/nav.jade
@@ -43,7 +43,7 @@ template(name='nav')
                 //- a.mobile.hidden.item(href='/staff' class="{{isActivePath '/staff'}}")
                 //-     i.info.circle.icon
                     //- |Staff
-                a.mobile.hidden.item(href="/account/profile/edit/#{currentUser._id}" class="{{isActivePath '/account/profile/edit/#{currentUser._id}'}}")
+                a.mobile.hidden.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
                     if currentUser.profile.image_id
                         img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
                     else
