bringing in the guns

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -262,7 +262,7 @@ template(name='text_view')
 
 
 template(name='phone_edit')
-    .ui.labeled.input
+    .ui.labeled.fluid.input
         // if icon
         //     i.grey.icon(class=icon)
         .ui.label 
@@ -299,7 +299,7 @@ template(name='code_edit')
 
 
 template(name='number_edit')
-    .ui.labeled.input
+    .ui.labeled.fluid.input
         .ui.label
             // if icon
             //     i.grey.icon(class=icon)
