--- a/components/footer.jade
+++ b/components/footer.jade
@@ -2,9 +2,8 @@ template(name='footer')
     .ui.fluid.inverted.segment.footer
         .ui.divider
         .ui.container.grid
-            .eight.wide.column
-                .ui.center.aligned.basic.segment
-                    .ui.header
+            .eight.wide.inverted.column
+                +health_club_info    
             .eight.wide.column
                 +role_switcher
         .row
