--- a/client/goldrun.jade
+++ b/client/goldrun.jade
@@ -16,7 +16,7 @@ template(name='goldrun')
                             .ui.header 
                                 //- +icolor name='internal' classes='ui inline image'
                                 |Check In Member
-                            .ui.doubling.centered.cards
+                            .ui.three.centered.cards
                                 each checkedout_members
                                     .card
                                         .image
@@ -66,72 +66,71 @@ template(name='goldrun')
                                                     strong #{start_date}
                                                 div expiration 
                                                     strong #{lease_expiration}
+                                                +icolor name='swimming-pool' classes='ui avatar image'
+                                                +icolor name='weightlift' classes='ui avatar image'
+                                                +icolor name='jacuzzi' classes='ui avatar image'
+                                                +icolor name='shower' classes='ui avatar image'
+                                                +icolor name='racquetball' classes='ui avatar image'
+                                                +icolor name='water-steam' classes='ui avatar image'
 
                                         +checkin_button
                                         if is_admin
                                             a.ui.icon.button(href="/user/#{username}/")
                                                 i.user.shield.icon
                                                 |View
-                                                //- div
-                                                //- +icolor name='swimming-pool' classes='ui avatar image'
-                                                //- +icolor name='weightlift' classes='ui avatar image'
-                                                //- +icolor name='jacuzzi' classes='ui avatar image'
-                                                //- +icolor name='shower' classes='ui avatar image'
-                                                //- +icolor name='racquetball' classes='ui avatar image'
-                                                //- +icolor name='water-steam' classes='ui avatar image'
 
-                                                //- each tags
-                                                //-     .ui.label #{this}
-                                                //- if signed_waiver
-                                                //-     .ui.green.basic.button
-                                                //-         i.checkmark.icon
-                                                //-         |Waiver Signed
-                                                //- else
-                                                //-     .ui.red.button.sign_waiver
-                                                //-         i.cancel.icon
-                                                //-         |Waiver Not Signed
-                                //- .column
-                                //-     .ui.header
-                                //-         //- +icolor name='megaphone' classes='ui inline image'
-                                //-         //- i.rss.icon
-                                //-         |Notices
-                                //-     .content
-                                //-         .ui.small.header FM receiver headsets now available to borrow for tvs
-                                        
-                                    //- .ui.accordion
-                                    //-     h4.title
-                                    //-         // +icolor name='edit-property' classes='ui inline image'
-                                    //-             // .ui.inline.header 
-                                    //-         i.rss.icon
-                                    //-         | Log
-                                    //-         i.dropdown.icon
-                                    //-     .content
-                                    //-         .ui.feed
-                                    //-             each events
-                                    //-                 .event
-                                    //-                     .label
-                                    //-                         img.ui.image(src="{{c.url object.profile.image_id width=400 height=400 gravity='face' crop='fill'}}")
-                                    //-                     .content
-                                    //-                         .summary
-                                    //-                             |#{body}
-                                    //-                             .date
-                                    //-                                 |#{when}
-                                    //-                             if is_dev
-                                    //-                                 +remove_button
-                                    //- .ui.segment
-                                    //-     .ui.header
-                                    //-         +icolor name='poll-topic' classes='ui inline image'
-                                    //-         |Poll
-                                    //-     .content
-                                    //- .ui.segment
-                                    //-     .ui.small.header
-                                    //-         +icolor name='front-desk' classes='ui inline image'
-                                    //-         | Staff On Duty
-                                    //-     with currentUser
-                                    //-         .ui.card
-                                    //-             img.ui.image(src="{{c.url profile.image_id }}")
-                                    //-             .content
-                                    //-                 .header #{username}
+                                        each tags
+                                            .ui.label #{this}
+                                        if signed_waiver
+                                            .ui.green.basic.button
+                                                i.checkmark.icon
+                                                |Waiver Signed
+                                        else
+                                            .ui.red.button.sign_waiver
+                                                i.cancel.icon
+                                                |Waiver Not Signed
+                            .column
+                                .ui.header
+                                    //- +icolor name='megaphone' classes='ui inline image'
+                                    //- i.rss.icon
+                                    |Notices
+                                .content
+                                    .ui.small.header FM receiver headsets now available to borrow for tvs
+                                    
+                                .ui.accordion
+                                    h4.title
+                                        // +icolor name='edit-property' classes='ui inline image'
+                                            // .ui.inline.header 
+                                        i.rss.icon
+                                        | Log
+                                        i.dropdown.icon
+                                    .content
+                                        .ui.feed
+                                            each events
+                                                .event
+                                                    .label
+                                                        img.ui.image(src="{{c.url object.profile.image_id width=400 height=400 gravity='face' crop='fill'}}")
+                                                    .content
+                                                        .summary
+                                                            |#{body}
+                                                            .date
+                                                                |#{when}
+                                                            if is_dev
+                                                                +remove_button
+                                .ui.segment
+                                    .ui.header
+                                        +icolor name='poll-topic' classes='ui inline image'
+                                        |Poll
+                                    .content
+                                .ui.segment
+                                    .ui.small.header
+                                        +icolor name='front-desk' classes='ui inline image'
+                                        | Staff On Duty
+                                    with currentUser
+                                        .ui.card
+                                            img.ui.image(src="{{c.url profile.image_id }}")
+                                            .content
+                                                .header #{username}
                     .centered.row
                         .ui.basic.center.aligned.segment
                             if is_admin
@@ -143,28 +142,26 @@ template(name='goldrun')
                             a.ui.button(href='https://sites.google.com/goldrun.page/home/guest-waiver?authuser=2' target='_window')
                                 |Guest Waiver
                 
-            //- .ui.check_out.modal
-            //-     .header Checkout #{selected_person.username}?
-            //-     .content
-            //-         .ui.header #{selected_person.first_name} #{selected_person.last_name}
-            //-         .ui.header #{selected_person.username}
-            //-     .actions
-            //-         .ui.large.ok.teal.button
-            //-             |Check Out
-            //-         .ui.large.cancel.basic.button
-            //-             |Cancel
-            //- .ui.check_in.modal
-            //-     .header Check In #{selected_person.username}?
-            //-     .content
-            //-         .ui.header #{selected_person.first_name} #{selected_person.last_name}
-            //-         .ui.header #{selected_person.username}
-            //-     .actions
-            //-         .ui.large.ok.green.button
-            //-             |Check In
-            //-         .ui.large.cancel.basic.button
-            //-             |Cancel
-            unless checking_in
-                +health_club_info    
+            .ui.check_out.modal
+                .header Checkout #{selected_person.username}?
+                .content
+                    .ui.header #{selected_person.first_name} #{selected_person.last_name}
+                    .ui.header #{selected_person.username}
+                .actions
+                    .ui.large.ok.teal.button
+                        |Check Out
+                    .ui.large.cancel.basic.button
+                        |Cancel
+            .ui.check_in.modal
+                .header Check In #{selected_person.username}?
+                .content
+                    .ui.header #{selected_person.first_name} #{selected_person.last_name}
+                    .ui.header #{selected_person.username}
+                .actions
+                    .ui.large.ok.green.button
+                        |Check In
+                    .ui.large.cancel.basic.button
+                        |Cancel
                         
                         
 template(name='add_resident')
