--- a/client/user_edit.jade
+++ b/client/user_edit.jade
@@ -10,28 +10,45 @@ template(name='user_edit')
                     i.cog.icon
                     | #{user_from_username_param.first_name} #{user_from_username_param.last_name} Profile
                 .ui.center.aligned.small.header @#{user_from_username_param.username}
-        .row
-            .five.wide.column.scrolling
+        .centered.row
+            .six.wide.column
+                .field
+                    if user_from_username_param.image_id
+                        label Image
+                        .ui.centered.rounded.image
+                            img.ui.medium.image(src="{{c.url user_from_username_param.image_id width=400 height=400 gravity='face' crop='fill'}}")
+                            a#remove_photo.ui.right.corner.link.label
+                                i.remove.link.icon
+                    else
+                        label Profile Image
+                        input(type='file' name='profile_image' accept='image/*')
+                +password_edit
+                +phone_editor
+                +username_edit
+                +emails_edit
+                .ui.orange.button.remove_user 
+                    i.remove.icon
+                    |Delete User
+
+            .ten.wide.column
                 .ui.form
                     with user_from_username_param
                         +text_edit key='first_name' label='First Name'
                         +text_edit key='last_name' label='Last Name'
+                        +text_edit key='address' label='Address'
                         +number_edit key='unit_number' label='Unit #'
                         +number_edit key='building_number' label='Building #'
                         +text_edit key='email' label='Email'
                         +phone_edit key='phone' label='Phone'
                         +date_edit key='start_date' label='Start Date'
                         +date_edit key='expiration_date' label='Expiration Date'
-                    .field
-                        if user_from_username_param.image_id
-                            label Image
-                            .ui.centered.rounded.image
-                                img.ui.medium.image(src="{{c.url user_from_username_param.image_id width=400 height=400 gravity='face' crop='fill'}}")
-                                a#remove_photo.ui.right.corner.link.label
-                                    i.remove.link.icon
-                        else
-                            label Profile Image
-                            input(type='file' name='profile_image' accept='image/*')
+                        .ui.small.header Roles
+                        +user_role_toggle role='admin'
+                        +user_role_toggle role='staff'
+                        +user_role_toggle role='resident'
+                        +user_role_toggle role='owner'
+                        +user_role_toggle role='guest'
+
                     //- .field
                     //-     if user_from_username_param.banner_image_id
                     //-         label Banner Image
@@ -43,14 +60,6 @@ template(name='user_edit')
                     //-         label Banner Image
                     //-         input(type='file' name='banner_image' accept='image/*')
                 //- .ui.fluid.button.update_profile Update
-                if is_dev
-                    +password_edit
-                    +phone_editor
-                    +username_edit
-                    +emails_edit
-                    .ui.orange.button.remove_user 
-                        i.remove.icon
-                        |Delete User
             .eleven.wide.column
                 //- +user_tribe_editor
                 //- +user_schema_editor
