--- a/components/nav.jade
+++ b/components/nav.jade
@@ -1,46 +1,48 @@
 template(name='nav')
-    .ui.inverted.borderless.stackable.top.attached.labeled.icon.menu
+    .ui.inverted.brown.borderless.stackable.top.attached.labeled.icon.menu
         a.toggle_sidebar.icon.item
             i.sidebar.icon
-        a.header.mobile.hidden.icon.item(href='/' class="{{isActivePath '/'}}") 
+        a.header.icon.item(href='/' class="{{isActivePath '/'}}") 
             i.home.icon
-        a.mobile.hidden.icon.item(href='/users' class="{{isActivePath '/users'}}")
+            |Home
+        a.icon.item(href='/users' class="{{isActivePath '/users'}}")
             i.users.icon
-        //- a.ui.mobile.hidden.simple.dropdown.item(href='/community' class="{{isActivePath '/community'}}")
-        //-     i.users.icon
-        //-     |Community
-        //-     .ui.menu
-        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-        //-             i.calendar.icon
-        //-             |Events
-        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-        //-             i.shopping.bag.icon
-        //-             |Classifieds
-        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-        //-             i.comments.outline.icon
-        //-             |Discussion
-        //- a.mobile.hidden.item(href='/posts' class="{{isActivePath '/posts'}}")
-        //-     i.sticky.note.outline.icon
-        //-     |Posts
-        //- a.mobile.hidden.item(href='/checkin' class="{{isActivePath '/checkin'}}")
-        //-     i.sign.in.alternate.icon
-        //-     |Health Club Check In
-        .ui.mobile.hidden.labeled.icon.right.inverted.menu
+            |Users
+        a.ui.mobile.hidden.simple.dropdown.item(href='/community' class="{{isActivePath '/community'}}")
+            i.users.icon
+            |Community
+            .ui.menu
+                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+                    i.calendar.icon
+                    |Events
+                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+                    i.shopping.bag.icon
+                    |Classifieds
+                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+                    i.comments.outline.icon
+                    |Discussion
+        a.mobile.hidden.item(href='/posts' class="{{isActivePath '/posts'}}")
+            i.sticky.note.outline.icon
+            |Posts
+        a.mobile.hidden.item(href='/checkin' class="{{isActivePath '/checkin'}}")
+            i.sign.in.alternate.icon
+            |Health Club Check In
+        .ui.mobile.hidden.labeled.icon.right.inverted.brown.menu
             if currentUser
-                //- a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                //-     i.line.chart.icon
-                //- .ui.simple.dropdown.icon.item
-                //-     i.alarm.icon
-                //-     .menu
-                //-         each notifications
-                //-             .item #{text}
-                //- a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
-                //-     i.mail.icon
+                a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+                    i.line.chart.icon
+                .ui.simple.dropdown.icon.item
+                    i.alarm.icon
+                    .menu
+                        each notifications
+                            .item #{text}
+                a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
+                    i.mail.icon
                 a.mobile.hidden.item(href='/admin' class="{{isActivePath '/admin'}}")
                     i.user.shield.icon
-                //- a.mobile.hidden.item(href='/staff' class="{{isActivePath '/staff'}}")
-                //-     i.info.circle.icon
-                    //- |Staff
+                a.mobile.hidden.item(href='/staff' class="{{isActivePath '/staff'}}")
+                    i.info.circle.icon
+                    |Staff
                 a.mobile.hidden.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
                     if currentUser.profile.image_id
                         img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
@@ -58,7 +60,7 @@ template(name='nav')
 
 
 template(name='sidebar')
-    .ui.left.inline.vertical.thin.sidebar.inverted.fixed.menu
+    .ui.left.inline.vertical.thin.sidebar.inverted.brown.fixed.menu
         a.header.toggle_sidebar.item(href='/' class="{{isActivePath '/'}}") 
             i.home.icon
             |Gold Run
